[tool.poetry]
name = "uptime"
version = "0.1.0"
description = "Website Uptime Monitor using GitHub Actions"
authors = ["Allex Veldman <a.veldman@chain-stock.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
